vc2-salesforce-version/force-app/main/default/objects/Country_Economy__c/Country_Economy__c.object-meta.xml
<CustomObject>
    <label>Country Economy</label>
    <pluralLabel>Country Economies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <label>Country Economy Key</label>
        <type>Text</type>
    </nameField>
</CustomObject>