vc2-salesforce-version/force-app/main/default/objects/Country_Economy__c/fields/Colony_Population__c.field-meta.xml
<CustomField>
    <fullName>Colony_Population__c</fullName>
    <label>Colony Population</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>