vc2-salesforce-version/force-app/main/default/objects/Country_Economy__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Lookup</type>
    <referenceTo>Country__c</referenceTo>
    <relationshipName>Country_Economies</relationshipName>
    <required>true</required>
</CustomField>