vc2-salesforce-version/force-app/main/default/objects/Country_Economy__c/fields/GDP_Per_Capita__c.field-meta.xml
<CustomField>
    <fullName>GDP_Per_Capita__c</fullName>
    <label>GDP Per Capita (£/100k)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <formula>IF(Population__c > 0, (GDP__c / Population__c) * 100000, 0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>