vc2-salesforce-version/force-app/main/default/objects/Country_Economy__c/fields/GDP_Rank__c.field-meta.xml
<CustomField>
    <fullName>GDP_Rank__c</fullName>
    <label>GDP Rank</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>