vc2-salesforce-version/force-app/main/default/objects/Country_Economy__c/fields/Total_Imports_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Imports_Value__c</fullName>
    <label>Total Imports Value (£)</label>
    <type>Summary</type>
    <summaryOperation>sum</summaryOperation>
    <summarizedField>Country_Product_Economy__c.Import_Value__c</summarizedField>
    <summaryForeignKey>Country_Product_Economy__c.Country_Economy__c</summaryForeignKey>
</CustomField>