vc2-salesforce-version/force-app/main/default/objects/Country_Economy__c/fields/Unemployment_Rate__c.field-meta.xml
<CustomField>
    <fullName>Unemployment_Rate__c</fullName>
    <label>Unemployment Rate</label>
    <type>Percent</type>
    <precision>6</precision>
    <scale>2</scale>
    <formula>IF(Workforce__c > 0, (Workforce__c - Employment__c) / Workforce__c, 0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>