vc2-salesforce-version/force-app/main/default/objects/Country_Economy__c/fields/Unemployment_Rate_Factory__c.field-meta.xml
<CustomField>
    <fullName>Unemployment_Rate_Factory__c</fullName>
    <label>Unemployment Rate Factory</label>
    <type>Percent</type>
    <precision>6</precision>
    <scale>2</scale>
    <formula>IF(Workforce_Factory__c > 0, (Workforce_Factory__c - Employment_Factory__c) / Workforce_Factory__c, 0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>