vc2-salesforce-version/force-app/main/default/objects/Country_Economy__c/fields/Unemployment_Rate_RGO__c.field-meta.xml
<CustomField>
    <fullName>Unemployment_Rate_RGO__c</fullName>
    <label>Unemployment Rate RGO</label>
    <type>Percent</type>
    <precision>6</precision>
    <scale>2</scale>
    <formula>IF(Workforce_RGO__c > 0, (Workforce_RGO__c - Employment_RGO__c) / Workforce_RGO__c, 0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>