vc2-salesforce-version/force-app/main/default/objects/Country_Economy__c/fields/Workforce_Factory__c.field-meta.xml
<CustomField>
    <fullName>Workforce_Factory__c</fullName>
    <label>Workforce Factory</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>