vc2-salesforce-version/force-app/main/default/objects/Country_Economy__c/fields/Workforce_RGO__c.field-meta.xml
<CustomField>
    <fullName>Workforce_RGO__c</fullName>
    <label>Workforce RGO</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>